fixed spacing when no edit options

--- a/app/styles/overrides.less
+++ b/app/styles/overrides.less
@@ -1,4 +1,13 @@
-// Bootstrap overrides
+// ### glyphicon-none
+
+.glyphicon-none:before {
+    content: "\2122";
+    color: transparent !important;
+}
+
+// ### END glyphicon-none
+
+// ### Bootstrap overrides
 
 @grid-gutter-width:         10px;
 
@@ -29,3 +38,5 @@
     }
   }
 }
+
+// ### END overrides
